--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <script
       src="https://kit.fontawesome.com/c71d7078cd.js"
@@ -22,7 +22,7 @@
 
     <container class="body">
       <container class="card">
-        <img src="../images/pexels-alena-koval-982865.jpg" width="350px" />
+        <img src="pexels-alena-koval-982865.jpg" width="350px" />
 
         <container class="login_container">
           <div>
